fixing align pagination and removing old thumbnail

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -877,11 +877,8 @@ iframe{
 .navbar .nav>li>a{
 	text-shadow:none;
 }
-.pagination{
-	.counter{
-		line-height: 30px;
-		margin-bottom: 0;
-	}
+div.pagination p.counter{
+	line-height: 20px;
 }
 .cat-items{
 	.filters{
